subprojects/creating-multi-project-builds/samples/kotlin-dsl-clean-error-message-1/err.txt
.../Greeter.java:5: error: cannot find symbol
        final String output = GreetingFormatter.greeting(args[0]);
                              ^
  symbol:   variable GreetingFormatter
  location: class Greeter
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':greeter:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 321ms
